compiler/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    File: peg$parseFile,
  };
  let peg$startRuleFunction = peg$parseFile;

  const peg$c0 = "#effect";
  const peg$c1 = "#component =>";
  const peg$c2 = "//";
  const peg$c3 = "\n";
  const peg$c4 = "/*";
  const peg$c5 = "*";
  const peg$c6 = "*/";
  const peg$c7 = "\"";
  const peg$c8 = "\\";
  const peg$c9 = "'";
  const peg$c10 = "`";
  const peg$c11 = "<#frag";
  const peg$c12 = ">";
  const peg$c13 = "</>";
  const peg$c14 = "<";
  const peg$c15 = "/>";
  const peg$c16 = "<//>";
  const peg$c17 = "</";
  const peg$c18 = "{/*";
  const peg$c19 = "*/}";
  const peg$c20 = "\\{";
  const peg$c21 = "{#slot";
  const peg$c22 = ":";
  const peg$c23 = "}";
  const peg$c24 = "{#/}";
  const peg$c25 = "{#if";
  const peg$c26 = "{#else}";
  const peg$c27 = "{";
  const peg$c28 = "=";
  const peg$c29 = "{...";
  const peg$c30 = "{#";
  const peg$c31 = "{@";

  const peg$r0 = /^[^"<'`\/#]/;
  const peg$r1 = /^[#\/<]/;
  const peg$r2 = /^[^{]/;
  const peg$r3 = /^[^\n]/;
  const peg$r4 = /^[^*]/;
  const peg$r5 = /^[^\/]/;
  const peg$r6 = /^[^\\"]/;
  const peg$r7 = /^[^\\']/;
  const peg$r8 = /^[^\\`]/;
  const peg$r9 = /^[$a-zA-Z0-9_.[\]"'`(),\-]/;
  const peg$r10 = /^[^<{]/;
  const peg$r11 = /^[a-zA-Z_$]/;
  const peg$r12 = /^[a-zA-Z_$0-9]/;
  const peg$r13 = /^[$a-zA-Z_]/;
  const peg$r14 = /^[$a-zA-Z_0-9\-:]/;
  const peg$r15 = /^[^"]/;
  const peg$r16 = /^[^{`]/;
  const peg$r17 = /^[^{}"]/;
  const peg$r18 = /^[ \t\n\r]/;

  const peg$e0 = peg$classExpectation(["\"", "<", "'", "`", "/", "#"], true, false, false);
  const peg$e1 = peg$classExpectation(["#", "/", "<"], false, false, false);
  const peg$e2 = peg$literalExpectation("#effect", false);
  const peg$e3 = peg$classExpectation(["{"], true, false, false);
  const peg$e4 = peg$literalExpectation("#component =>", false);
  const peg$e5 = peg$literalExpectation("//", false);
  const peg$e6 = peg$classExpectation(["\n"], true, false, false);
  const peg$e7 = peg$literalExpectation("\n", false);
  const peg$e8 = peg$literalExpectation("/*", false);
  const peg$e9 = peg$classExpectation(["*"], true, false, false);
  const peg$e10 = peg$literalExpectation("*", false);
  const peg$e11 = peg$classExpectation(["/"], true, false, false);
  const peg$e12 = peg$literalExpectation("*/", false);
  const peg$e13 = peg$literalExpectation("\"", false);
  const peg$e14 = peg$classExpectation(["\\", "\""], true, false, false);
  const peg$e15 = peg$literalExpectation("\\", false);
  const peg$e16 = peg$anyExpectation();
  const peg$e17 = peg$literalExpectation("'", false);
  const peg$e18 = peg$classExpectation(["\\", "'"], true, false, false);
  const peg$e19 = peg$literalExpectation("`", false);
  const peg$e20 = peg$classExpectation(["\\", "`"], true, false, false);
  const peg$e21 = peg$classExpectation(["$", ["a", "z"], ["A", "Z"], ["0", "9"], "_", ".", "[", "]", "\"", "'", "`", "(", ")", ",", "-"], false, false, false);
  const peg$e22 = peg$literalExpectation("<#frag", false);
  const peg$e23 = peg$literalExpectation(">", false);
  const peg$e24 = peg$literalExpectation("</>", false);
  const peg$e25 = peg$literalExpectation("<", false);
  const peg$e26 = peg$literalExpectation("/>", false);
  const peg$e27 = peg$literalExpectation("<//>", false);
  const peg$e28 = peg$literalExpectation("</", false);
  const peg$e29 = peg$classExpectation(["<", "{"], true, false, false);
  const peg$e30 = peg$literalExpectation("{/*", false);
  const peg$e31 = peg$literalExpectation("*/}", false);
  const peg$e32 = peg$literalExpectation("\\{", false);
  const peg$e33 = peg$literalExpectation("{#slot", false);
  const peg$e34 = peg$literalExpectation(":", false);
  const peg$e35 = peg$literalExpectation("}", false);
  const peg$e36 = peg$literalExpectation("{#/}", false);
  const peg$e37 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false, false);
  const peg$e38 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$", ["0", "9"]], false, false, false);
  const peg$e39 = peg$literalExpectation("{#if", false);
  const peg$e40 = peg$literalExpectation("{#else}", false);
  const peg$e41 = peg$literalExpectation("{", false);
  const peg$e42 = peg$literalExpectation("=", false);
  const peg$e43 = peg$literalExpectation("{...", false);
  const peg$e44 = peg$classExpectation(["$", ["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e45 = peg$classExpectation(["$", ["a", "z"], ["A", "Z"], "_", ["0", "9"], "-", ":"], false, false, false);
  const peg$e46 = peg$classExpectation(["\""], true, false, false);
  const peg$e47 = peg$classExpectation(["{", "`"], true, false, false);
  const peg$e48 = peg$literalExpectation("{#", false);
  const peg$e49 = peg$literalExpectation("{@", false);
  const peg$e50 = peg$classExpectation(["{", "}", "\""], true, false, false);
  const peg$e51 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);

  function peg$f0(parts) {
    return parts.filter(part => part !== null)
  }
  function peg$f1(react, code) {
    return { react, code: code[1] }
  }
  function peg$f2(code) {
    return { component: code }
  }
  function peg$f3() {    return null  }
  function peg$f4() {    return null  }
  function peg$f5(props, children) {
    return {
        tag: "preact.Fragment",
        props,
        children: children.filter(child => child !== null),
    }
  }
  function peg$f6(tag, props) {
    return { tag, props, children: [] }
  }
  function peg$f7(tag, props, children, close) {
    return {
        tag,
        props,
        children: children.filter(child => child !== null),
    }
  }
  function peg$f8() {    return "/"  }
  function peg$f9(tag) {    return tag  }
  function peg$f10(text) {
    const txt = text.trim().replace(/\s+/g, " ")
    if (txt === "") {
        return null
    }
    return txt
  }
  function peg$f11() {    return null  }
  function peg$f12(js) {    return { js }  }
  function peg$f13(slot, propName, content) {
    return {
        slot,
        propName: propName?.[1] ?? null,
        content: content.filter(item => item !== null)
    }
  }
  function peg$f14(condition, content, els) {
    return {
        condition,
        content: content.filter(item => item !== null),
        alt: (els?.[1] ?? []).filter(item => item !== null),
    }
  }
  function peg$f15(items) {
    return items.map(item => item[1])
  }
  function peg$f16(name) {    return name  }
  function peg$f17(name, value) {    return [name, value]  }
  function peg$f18(name, str) {
    return [name, `"${str.join("")}"`]
  }
  function peg$f19(name, str) {
    return [name, `\`${str.join("")}\``]
  }
  function peg$f20(name) {    return [name, "true"]  }
  function peg$f21(js) {    return `...${js}`  }
  function peg$f22(code) {    return `\${${code}}`  }
  function peg$f23(js) {    return js  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseFile() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseInter();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseInter();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseInter() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = input.charAt(peg$currPos);
        if (peg$r0.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseComment();
      if (s0 === peg$FAILED) {
        s0 = peg$parseString();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTag();
          if (s0 === peg$FAILED) {
            s0 = peg$parseEffect();
            if (s0 === peg$FAILED) {
              s0 = peg$parseComponent();
              if (s0 === peg$FAILED) {
                s0 = input.charAt(peg$currPos);
                if (peg$r1.test(s0)) {
                  peg$currPos++;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e1); }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseEffect() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = [];
        s5 = input.charAt(peg$currPos);
        if (peg$r2.test(s5)) {
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = input.charAt(peg$currPos);
            if (peg$r2.test(s5)) {
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s3 = input.substring(s3, peg$currPos);
        } else {
          s3 = s4;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = peg$parseBlock();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f1(s3, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComponent() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 13) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 13;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseBlock();
        if (s4 !== peg$FAILED) {
          s3 = input.substring(s3, peg$currPos);
        } else {
          s3 = s4;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComment() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r3.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r3.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
      }
      if (input.charCodeAt(peg$currPos) === 10) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = input.charAt(peg$currPos);
        if (peg$r4.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e9); }
        }
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 42) {
            s4 = peg$c5;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e10); }
          }
          if (s4 !== peg$FAILED) {
            s5 = input.charAt(peg$currPos);
            if (peg$r5.test(s5)) {
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e11); }
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = input.charAt(peg$currPos);
          if (peg$r4.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 42) {
              s4 = peg$c5;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e10); }
            }
            if (s4 !== peg$FAILED) {
              s5 = input.charAt(peg$currPos);
              if (peg$r5.test(s5)) {
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e11); }
              }
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
        }
        if (input.substr(peg$currPos, 2) === peg$c6) {
          s3 = peg$c6;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e12); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4();
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseString() {
    let s0, s1, s2, s3, s4, s5, s6;
